@@ -19,6 +19,7 @@
 	    <activity android:name="activities.Settings" android:label="@string/app_name"/>
 	    <activity android:name="activities.TopCharts" android:label="@string/app_name"/>
 	    <activity android:name="activities.RecentlyPlayed" android:label="@string/app_name"/>
+	    <activity android:name="activities.About" android:label="@string/app_name"/>
 		<service android:name="media.PlaybackService"></service>
     </application>
     
